objects/Project_Request__c.object
<CustomObject>
    <fields>
        <fullName>Associate_Account_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associate Account Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Better_Inform_Clinical_Development__c</fullName>
        <description>Better inform clinical development for more appropriate development.</description>
        <inlineHelpText>Better inform clinical development for more appropriate development.</inlineHelpText>
        <label>Better Inform Clinical Development</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shape clinical development strategy</fullName>
                </value>
                <value>
                    <fullName>Novel target discovery</fullName>
                </value>
                <value>
                    <fullName>Target unmet need</fullName>
                </value>
                <value>
                    <fullName>Reduced study size &amp; duration</fullName>
                </value>
                <value>
                    <fullName>Optimized recruitment</fullName>
                </value>
                <value>
                    <fullName>Identify sub group of populations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comparison__c</fullName>
        <label>Comparison</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Image__c</fullName>
        <description>Corporate image for transversal contributions.</description>
        <inlineHelpText>Corporate image for transversal contributions.</inlineHelpText>
        <label>Corporate Image</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitive advantage</fullName>
                </value>
                <value>
                    <fullName>Scientific / tech leadership</fullName>
                </value>
                <value>
                    <fullName>Data driven company</fullName>
                </value>
                <value>
                    <fullName>Ethics / transparency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Improved_Clinical_Trial_Success_Rates__c</fullName>
        <description>Improved clinical trial success rates for more appropriate development.</description>
        <inlineHelpText>Improved clinical trial success rates for more appropriate development.</inlineHelpText>
        <label>Improved Clinical Trial Success Rates</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Higher % of responders</fullName>
                </value>
                <value>
                    <fullName>Quicker response</fullName>
                </value>
                <value>
                    <fullName>Better response magnitude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initiate_Because_of_DRE_Training__c</fullName>
        <label>Initiate Because of DRE Training</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intended_Stakeholder__c</fullName>
        <label>Intended Stakeholder</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intervention__c</fullName>
        <label>Intervention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longer_Product_Lifetime__c</fullName>
        <description>Longer product lifetime for better / sustained adoption.</description>
        <inlineHelpText>Longer product lifetime for better / sustained adoption.</inlineHelpText>
        <label>Longer Product Lifetime</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New indication</fullName>
                </value>
                <value>
                    <fullName>Extension of indication</fullName>
                </value>
                <value>
                    <fullName>Sustaining reimbursement</fullName>
                </value>
                <value>
                    <fullName>RX to OTC conversion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Empowerment__c</fullName>
        <description>Medical empowerment for transversal contributions.</description>
        <inlineHelpText>Medical empowerment for transversal contributions.</inlineHelpText>
        <label>Medical Empowerment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Improve local disease expertise</fullName>
                </value>
                <value>
                    <fullName>Easy access to data</fullName>
                </value>
                <value>
                    <fullName>Better knowledge management</fullName>
                </value>
                <value>
                    <fullName>New insights generation &amp; validation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Value_Description__c</fullName>
        <label>Medical Value Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Methodology_Question_Type__c</fullName>
        <label>Methodology Question Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Methodology_Question_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>More_Appropriate_Access__c</fullName>
        <description>More appropriate access.</description>
        <inlineHelpText>More appropriate access.</inlineHelpText>
        <label>More Appropriate Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Speed up regulatory process</fullName>
                </value>
                <value>
                    <fullName>Arguments to address local specificities</fullName>
                </value>
                <value>
                    <fullName>Opportunity sizing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>More_Appropriate_Pricing__c</fullName>
        <description>More appropriate pricing for more appropriate access.</description>
        <inlineHelpText>More appropriate pricing for more appropriate access.</inlineHelpText>
        <label>More Appropriate Pricing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Build cost model customized to local needs</fullName>
                </value>
                <value>
                    <fullName>Identify sub-groups with higher cost</fullName>
                </value>
                <value>
                    <fullName>Produce health economic model for local needs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Trainings__c</fullName>
        <label>Number of Trainings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1+ Sessions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project Requests</relationshipLabel>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outputs_Description__c</fullName>
        <label>Outputs Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Project_Satisfaction__c</fullName>
        <label>Overall Project Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Unsatisfied</fullName>
                </value>
                <value>
                    <fullName>2 - No evaluation</fullName>
                </value>
                <value>
                    <fullName>3 - Satisfied</fullName>
                </value>
                <value>
                    <fullName>4 - Publication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Principal Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Claim__c</fullName>
        <description>Product claim for better / sustained adoption.</description>
        <inlineHelpText>Product claim for better / sustained adoption.</inlineHelpText>
        <label>Product Claim</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New effectiveness medical claims</fullName>
                </value>
                <value>
                    <fullName>New safety medical claims</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Monitoring__c</fullName>
        <description>Product monitoring for better / sustained adoption.</description>
        <inlineHelpText>Product monitoring for better / sustained adoption.</inlineHelpText>
        <label>Product Monitoring</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Market penetration uptakes</fullName>
                </value>
                <value>
                    <fullName>Prescription behaviors</fullName>
                </value>
                <value>
                    <fullName>Switches from/to competition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Project Name / PICO ID to be assigned for project acceptance.</description>
        <inlineHelpText>Project Name / PICO ID to be assigned for project acceptance.</inlineHelpText>
        <label>Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Objectives__c</fullName>
        <label>Project Objectives</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Record_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Record Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Stakes__c</fullName>
        <label>Project Stakes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Rapid Assessment</fullName>
                </value>
                <value>
                    <fullName>2 - Bibliographic</fullName>
                </value>
                <value>
                    <fullName>3 - Internal Strategy</fullName>
                </value>
                <value>
                    <fullName>4 - Potential Publication</fullName>
                </value>
                <value>
                    <fullName>5 - HTA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Meeting_Time__c</fullName>
        <label>Requested Meeting Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requester_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Requests</relationshipLabel>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <label>Requester Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_First_Name__c</fullName>
        <formula>Requester_Contact__r.FirstName</formula>
        <label>Requester First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <label>Requester Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_s_Comments__c</fullName>
        <label>Requester's Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Required_By_Date__c</fullName>
        <label>Required By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scientific_Communications__c</fullName>
        <description>Scientific communication for transversal contributions.</description>
        <inlineHelpText>Scientific communication for transversal contributions.</inlineHelpText>
        <label>Scientific Communications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Increased transparency</fullName>
                </value>
                <value>
                    <fullName>Attractiveness to KOLs</fullName>
                </value>
                <value>
                    <fullName>Responsiveness (to field team for example)</fullName>
                </value>
                <value>
                    <fullName>Generated high impact factor article(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Project_Name__c</fullName>
        <label>Secondary Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TaskRay_Project_Id__c</fullName>
        <formula>TaskRay_Project__r.Id</formula>
        <label>TaskRay Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Working_Group__c</fullName>
        <label>Working Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workstream__c</fullName>
        <label>Workstream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Workstream</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Meeting_Time__c</fullName>
        <label>Actual Meeting Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Patient_Experience__c</fullName>
        <description>Patient experience for transversal contributions.</description>
        <inlineHelpText>Patient experience for transversal contributions.</inlineHelpText>
        <label>Patient Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generate feedback or patient insights</fullName>
                </value>
                <value>
                    <fullName>Understand persistence / compliance drivers</fullName>
                </value>
                <value>
                    <fullName>Patient centricity</fullName>
                </value>
                <value>
                    <fullName>Personalized medicine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Principal_Consultant_Email__c</fullName>
        <formula>Principal_Consultant__r.Email</formula>
        <label>Principal Consultant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Consultant_Title__c</fullName>
        <formula>Principal_Consultant__r.Title</formula>
        <label>Principal Consultant Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principle_Consultant_Phone__c</fullName>
        <formula>Principal_Consultant__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principle Consultant Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Grade__c</fullName>
        <label>Priority Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grade A: Publication, Abstract, Poster or HTA</fullName>
                </value>
                <value>
                    <fullName>Grade B: Payer or Regulatory response</fullName>
                </value>
                <value>
                    <fullName>Grade C: Clinical business question</fullName>
                </value>
                <value>
                    <fullName>Grade Z: Sanofi iEGP</fullName>
                </value>
                <value>
                    <fullName>Grade A</fullName>
                    <isActive>false</isActive>
                    <label>Grade A</label>
                </value>
                <value>
                    <fullName>Grade B</fullName>
                    <isActive>false</isActive>
                    <label>Grade B</label>
                </value>
                <value>
                    <fullName>Grade C</fullName>
                    <isActive>false</isActive>
                    <label>Grade C</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskRay_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TaskRay Project link.</description>
        <inlineHelpText>This field will auto-populate upon TaskRay Project creation. Please leave this field blank. This field is intended to serve as a link.</inlineHelpText>
        <label>TaskRay Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>Project Requests</relationshipLabel>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intention_to_Publish__c</fullName>
        <label>Intention to Publish</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Object created to receive client requests from the DOC Data portal.</description>
    <label>Project Request</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Project Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requester_Name__c</columns>
        <columns>Requester_Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Requireds_Field_for_Project_Creation</fullName>
        <active>true</active>
        <errorConditionFormula>(
ISBLANK(Project_Name__c) ||
ISBLANK(Secondary_Project_Name__c) ||
ISBLANK(Working_Group__c) ||
ISBLANK(Opportunity__c) ||
ISBLANK(Associate_Account_Director__c) ||
ISBLANK(TEXT(Project_Type__c)) ||
ISBLANK(Principal_Consultant__c) ||
ISBLANK(TEXT(Priority_Grade__c)) ||
ISBLANK(Methodology_Question_Type__c) ||
ISBLANK(Question__c) ||
ISBLANK(Population__c) ||
ISBLANK(Intervention__c) ||
ISBLANK(Comparison__c) ||
ISBLANK(Outcome__c) ||
ISBLANK(Problem__c) ||
ISBLANK(Solution__c) ||
ISBLANK(Value__c) ||
ISBLANK(Requester_Contact__c) ||
ISBLANK(TEXT(Initiate_Because_of_DRE_Training__c)) ||
ISBLANK(Medical_Value_Description__c) ||
ISBLANK(TEXT(Number_of_Trainings__c)) ||
ISBLANK(Outputs_Description__c) ||
ISBLANK(Project_Objectives__c) ||
ISBLANK(Project_Stakes__c) ||
ISBLANK(Requested_Meeting_Time__c) ||
ISBLANK(Requester_Email__c) ||
ISBLANK(Required_By_Date__c) ||
ISBLANK(Requester_Contact__c) 
) &amp;&amp; Project_Record_Created__c == true</errorConditionFormula>
        <errorMessage>You cannot generate a project record unless you have completed all the fields on this request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Twenty_Character_Minimum_Fields</fullName>
        <active>true</active>
        <description>Question, Problem, Solution, and Value fields cannot be fewer that 20 characters.</description>
        <errorConditionFormula>($User.Id != '0050f000009IX1y' &amp;&amp; $User.Id != '005G0000008CJgr') &amp;&amp; ( LEN(Question__c) &lt; 20 || LEN(Problem__c) &lt; 20 || LEN(Solution__c) &lt; 20 || LEN(Value__c) &lt; 20)</errorConditionFormula>
        <errorMessage>Question, Problem, Solution, and Value fields cannot be fewer that 20 characters.</errorMessage>
    </validationRules>
</CustomObject>